--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "preferGlobal": true,
-  "bin": "../controllers/commands.js",
+  "bin": "./app/controllers/commands.js",
   "scripts": {
-    "start": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Abass Ade",
